Favorites/favorites.css
/* Made by Rasmus */

@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Secular+One&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
}

body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background-image: url(/assets/star-transparent.png),
    linear-gradient(to right, #212d5d, #190b23);
  background-size: cover, cover;

  padding: 3rem;
}

h1 {
  font-family: "Secular One", sans-serif;
  font-weight: 400;
  font-style: normal;
  text-transform: uppercase;
  color: #ffffff;
  letter-spacing: 2px;
  text-align: center;
  margin-bottom: 3rem;
  font-size: 3rem;
}

.favorites-card-wrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  height: 100%;
  div {
    padding: 1rem;
    h2 {
      text-align: center;
      font-family: "Lora", serif;
      font-optical-sizing: auto;
      font-weight: 400;
      font-style: normal;
      letter-spacing: 10px;
      text-transform: uppercase;
      font-size: 1.2rem;
      color: #ffd029;
      margin-bottom: 1rem;
    }
    .planet-div {
      color: white;
      border-radius: 50%;
      width: 100%;
      padding: 1rem;
      aspect-ratio: 1 / 1;
    }
    #planet-color-1 {
      background-color: #6e6e6e;
    }
    #planet-color-2 {
      background-color: #6e6e6e;
    }
    #planet-color-3 {
      background-color: #3399ff;
    }
    #planet-color-4 {
      background-color: #3399ff;
    }
    #planet-color-5 {
      background-color: #3399ff;
    }
    #planet-color-6 {
      background-color: #3399ff;
    }
    #planet-color-7 {
      background-color: #cce0ff;
    }
    #planet-color-8 {
      background-color: #3399ff;
    }
  }
}

